// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer component A Heading widget 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <h2
        class="sc-dCFHLb lpvsqF sc-lcIPJg nZkps"
      >
        Something Important
      </h2>
    </div>
  </div>
</div>
`;

exports[`Renderer component A HighlightedName widget 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <span
        class="sc-hmdomO ejALKt sc-jsJBEP ihMQIZ sc-jMakVo cvuYgZ sc-iMTnTL ioTtgK"
      >
        Jellyfish
      </span>
    </div>
  </div>
</div>
`;

exports[`Renderer component A Link widget 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <a
        class="sc-bbSZdi cjkLKP sc-fBWQRz HTGQf"
        color="primary.main"
        href="https://trello.com/b/lEIoUMKY"
        rel="noopener"
        target="_blank"
      >
        View trello board
      </a>
    </div>
  </div>
</div>
`;

exports[`Renderer component A List widget 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <ol
        class="sc-hwdzOV sc-jaXxmE bBtbcd exfyEY sc-jGKxIK hmzTLV"
      >
        <li>
          <div
            class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
          >
            <a
              class="sc-bbSZdi cjkLKP sc-fBWQRz HTGQf"
              color="primary.main"
              href="https://jel.ly.fish/user"
            >
              user
            </a>
          </div>
        </li>
        <li>
          <div
            class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
          >
            <a
              class="sc-bbSZdi cjkLKP sc-fBWQRz HTGQf"
              color="primary.main"
              href="https://jel.ly.fish/org"
            >
              org
            </a>
          </div>
        </li>
        <li>
          <div
            class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
          >
            <a
              class="sc-bbSZdi cjkLKP sc-fBWQRz HTGQf"
              color="primary.main"
              href="https://jel.ly.fish/issue"
            >
              issue
            </a>
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Renderer component A ProgressBar widget 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq hOYtMR sc-kAyceB fnnwQO sc-dAbbOL iHGMOf sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
      >
        <div
          class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
        >
          Progress
        </div>
      </div>
      <div
        class="sc-ktJbId lWXYk sc-gmgFlS jsiayY"
        color="#fff"
        type="tertiary"
      >
        <div
          class="sc-hZDyAQ fUjDGn"
        >
          83
          %
        </div>
        <div
          class="sc-guJBdh fLOTyc"
          style="width: 82.63512353%;"
        >
          <div
            class="sc-fTFjTM eAkYdP"
            style="width: 121.0139172402832%;"
          >
            83
            %
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A Tag widget 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB jxvYmy sc-dAbbOL fWzuWL sc-ggpjZQ kLyInQ"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB csUDXt sc-dAbbOL sc-dZoequ fWzuWL czgoIE"
        >
          <div
            class="sc-hmdomO eoXVnh sc-bXCLTC fyhfz"
          >
            subscription: 
          </div>
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC fyhfz"
          >
            premium
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A badge widget 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <span
        class="sc-hmdomO ejALKt sc-jsJBEP chzSEm sc-bmzYkS jUBrMa sc-iHGNWf cVnbHI"
      >
        closed
      </span>
    </div>
  </div>
</div>
`;

exports[`Renderer component A boolean 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
      >
        <div
          class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
        >
          Field Title
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC jcOeME"
        >
          Field description
        </div>
      </div>
      <div
        class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
      >
        true
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A button group widget 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB jxvYmy sc-dAbbOL sc-dtInlm fWzuWL hVyuVa"
      >
        <a
          class="StyledButton-sc-323bzc-0 ldhSDK sc-jEACwC sc-dLMFU jeSgeV jIsVue sc-ikkxIA eUBNFQ"
          href="https://jel.ly.fish/item 1"
        >
          item 1
        </a>
        <a
          class="StyledButton-sc-323bzc-0 ldhSDK sc-jEACwC sc-dLMFU jeSgeV jIsVue sc-ikkxIA eUBNFQ"
          href="https://jel.ly.fish/item 2"
        >
          item 2
        </a>
        <a
          class="StyledButton-sc-323bzc-0 ldhSDK sc-jEACwC sc-dLMFU jeSgeV jIsVue sc-ikkxIA eUBNFQ"
          href="https://jel.ly.fish/item 3"
        >
          item 3
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A button widget 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <a
        class="StyledButton-sc-323bzc-0 dArTnk sc-jEACwC sc-cPiKLX jeSgeV kENxWu sc-ikkxIA eUBNFQ"
        href="http://jel.ly.fish/issue"
        target="_blank"
      >
        issue
      </a>
    </div>
  </div>
</div>
`;

exports[`Renderer component A color widget 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB kiWfLG sc-dAbbOL RsEAz"
      >
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
        >
          #ff0000
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A default value 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
      >
        <div
          class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
        >
          Field Title
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC jcOeME"
        >
          Field description
        </div>
      </div>
      <div
        class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer component A drop-down button widget 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB jxvYmy sc-dSCufp ggtdNI sc-jnOGJG jIYfnk"
      >
        <button
          class="StyledButton-sc-323bzc-0 ldhSDK sc-jEACwC sc-dLMFU jeSgeV jIsVue sc-ikkxIA eUBNFQ sc-hIUJlX gUomGs"
          type="button"
        >
          <div
            class="sc-gsFSXq gghMVi sc-kAyceB jxvYmy sc-dAbbOL gEUimX"
          >
            <div
              class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
            >
              Links
            </div>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down "
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A hidden field 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            Shown
          </div>
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
        >
          This should be shown
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A hidden title 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
      >
        No title shown
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A markdown field 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr sc-fFlnrN iDfORV"
      >
        <div>
          <h1
            class="sc-dCFHLb lpvsqF sc-jxOSlx hxGVXX"
            id="user-content-something-important"
          >
            <a
              class="sc-bbSZdi cjkLKP sc-fBWQRz HTGQf heading-anchor-link"
              color="primary.main"
              href="#something-important"
            >
              <span
                class="icon icon-link"
              />
            </a>
            Something Important
          </h1>
          

          <h2
            class="sc-dCFHLb lpvsqF sc-lcIPJg nZkps"
            id="user-content-something-less-important"
          >
            <a
              class="sc-bbSZdi cjkLKP sc-fBWQRz HTGQf heading-anchor-link"
              color="primary.main"
              href="#something-less-important"
            >
              <span
                class="icon icon-link"
              />
            </a>
            Something less important
          </h2>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A materialized field 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            Name
          </div>
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
        >
          John Smith
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A null object 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
      >
        <div
          class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
        >
          Field Title
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC jcOeME"
        >
          Field description
        </div>
      </div>
      <div
        class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer component A number 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
      >
        <div
          class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
        >
          Field Title
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC jcOeME"
        >
          Field description
        </div>
      </div>
      <div
        class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
      >
        4.5
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A string 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
      >
        <div
          class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
        >
          Field Title
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC jcOeME"
        >
          Field description
        </div>
      </div>
      <div
        class="sc-hmdomO kvewVC sc-bXCLTC hiXRZr"
      >
        A string value
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A string-interpolated value 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
      >
        <div
          class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
        >
          Mentions
        </div>
      </div>
      <div
        class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
      >
        4 mentions
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A truncated array of strings field 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB jxvYmy sc-dAbbOL dEXRVA"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
        >
          <div
            class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
          >
            item 1
          </div>
        </div>
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
        >
          <div
            class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
          >
            item 2
          </div>
        </div>
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
        >
          <div
            class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
          >
            item 3
          </div>
        </div>
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
        >
          <div
            class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
          >
            item 4
          </div>
        </div>
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
        >
          <div
            class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
          >
            + 2 more
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A truncated string 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr sc-kMkxaj hGOzSL"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut facilisis urna. Suspendisse ullamcorper, velit ut auctor vulputate, nibh sem finibus ipsum, vel bibendum tellus nulla non nunc. In porta velit odio. Vivamus nibh dolor, bibendum vel velit sit amet, suscipit lobortis leo. Donec tempus justo non nisi pulvinar, vitae fringilla ligula aliquam. Proin efficitur tellus ac tincidunt iaculis. Duis mattis urna quis libero feugiat, nec pretium felis ornare.
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component A uri field 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <a
        class="sc-bbSZdi cjkLKP sc-fBWQRz HTGQf"
        color="primary.main"
        href="https://google.com"
      >
        https://google.com
      </a>
    </div>
  </div>
</div>
`;

exports[`Renderer component An Img widget 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <img
        alt="Jellyfish"
        class="sc-krNlru exYRZF"
        src="https://upload.wikimedia.org/wikipedia/commons/4/44/Jelly_cc11.jpg"
        width="200"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer component An array of different type items 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB jxvYmy sc-dAbbOL dEXRVA"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
        >
          <div
            class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
          >
            <div
              class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
            >
              <div
                class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
              >
                Number
              </div>
            </div>
            <div
              class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
            >
              5
            </div>
          </div>
        </div>
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
        >
          <div
            class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
          >
            <div
              class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
            >
              Text
            </div>
          </div>
          <div
            class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
          >
            <div
              class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
            >
              <div
                class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
              >
                Text
              </div>
            </div>
            <div
              class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr sc-fFlnrN iDfORV"
            >
              <div>
                <h1
                  class="sc-dCFHLb lpvsqF sc-jxOSlx hxGVXX"
                  id="user-content-this-is-markdown"
                >
                  <a
                    class="sc-bbSZdi cjkLKP sc-fBWQRz HTGQf heading-anchor-link"
                    color="primary.main"
                    href="#this-is-markdown"
                  >
                    <span
                      class="icon icon-link"
                    />
                  </a>
                  This is markdown
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component An array of strings field 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB jxvYmy sc-dAbbOL dEXRVA"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
        >
          <span
            class="sc-hmdomO ejALKt sc-jsJBEP kxVqKr sc-bmzYkS jUBrMa sc-iHGNWf cVnbHI"
          >
            first item
          </span>
        </div>
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
        >
          <span
            class="sc-hmdomO ejALKt sc-jsJBEP chzSEm sc-bmzYkS jUBrMa sc-iHGNWf cVnbHI"
          >
            second item
          </span>
        </div>
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
        >
          <span
            class="sc-hmdomO ejALKt sc-jsJBEP gjngia sc-bmzYkS jUBrMa sc-iHGNWf cVnbHI"
          >
            third item
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component An email field 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <a
        class="sc-bbSZdi cjkLKP sc-fBWQRz HTGQf"
        color="primary.main"
        href="mailto:user@balena.io"
      >
        user@balena.io
      </a>
    </div>
  </div>
</div>
`;

exports[`Renderer component An evaluated value 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
      >
        <div
          class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
        >
          Multiple Owners
        </div>
      </div>
      <div
        class="sc-gFAWRd hqjpfh sc-gmPhUn gzFqhQ"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bQBqlD"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 esJfWn StyledCheckBox-sc-1dbk5ju-6 cLdvuG"
          >
            <input
              checked=""
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ogbwN"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eRnqxZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gKzRMM"
            >
              <svg
                class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 fzUnFn"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6,11.3 L10.3,16 L18,6.2"
                  fill="none"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component An integer 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
      >
        <div
          class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
        >
          Field Title
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC jcOeME"
        >
          Field description
        </div>
      </div>
      <div
        class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
      >
        5000
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component An invalid value 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB jxvYmy sc-dAbbOL fWzuWL sc-koXPp jTEhkV"
      >
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC dvBMut"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-ban "
            data-icon="ban"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M367.2 412.5L99.5 144.8C77.1 176.1 64 214.5 64 256c0 106 86 192 192 192c41.5 0 79.9-13.1 111.2-35.5zm45.3-45.3C434.9 335.9 448 297.5 448 256c0-106-86-192-192-192c-41.5 0-79.9 13.1-111.2 35.5L412.5 367.2zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="sc-hmdomO ejALKt sc-jsJBEP gKPbN"
        >
          Invalid data/schema
        </span>
      </div>
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
      >
        <div
          class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
        >
          Field Title
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC jcOeME"
        >
          Field description
        </div>
      </div>
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            Eh
          </div>
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
        >
          what
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component An object with various properties 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
      >
        <div
          class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
        >
          Field Title
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC jcOeME"
        >
          Field description
        </div>
      </div>
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            A String Field
          </div>
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
        >
          The string value
        </div>
      </div>
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            A Number Field
          </div>
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
        >
          12.345
        </div>
      </div>
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            An Integer Field
          </div>
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
        >
          5000
        </div>
      </div>
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            A Boolean Field
          </div>
        </div>
        <div
          class="sc-gFAWRd bUhMkq sc-gmPhUn gzFqhQ"
        >
          <label
            class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bQBqlD"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 esJfWn StyledCheckBox-sc-1dbk5ju-6 cLdvuG"
            >
              <input
                class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ogbwN"
                type="checkbox"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 cYppjB StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 gKzRMM"
              />
            </div>
          </label>
        </div>
      </div>
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            A Null Field
          </div>
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component Explicitly specifying which fields to render 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
      >
        <div
          class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
        >
          Field Title
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC jcOeME"
        >
          Field description
        </div>
      </div>
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            A String Field
          </div>
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
        >
          The string value
        </div>
      </div>
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            A Number Field
          </div>
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
        >
          12.345
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component Re-ordered fields 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            Field B
          </div>
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
        >
          field B value
        </div>
      </div>
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            Field C
          </div>
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
        >
          field C value
        </div>
      </div>
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            Field A
          </div>
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
        >
          field A value
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component Using context functions 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr"
      >
        Hello Jellyfish
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer component anyOf options 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 gXEEZC sc-iEXKAA fEtcpx"
  >
    <div
      class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
    >
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
      >
        <div
          class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
        >
          Text
        </div>
      </div>
      <div
        class="sc-gsFSXq gghMVi sc-kAyceB fnnwQO sc-dAbbOL jIzoO sc-fiCwlc kLagzx"
      >
        <div
          class="sc-gsFSXq gghMVi sc-kAyceB eHLJgc"
        >
          <div
            class="sc-hmdomO jLJFWQ sc-bXCLTC hiXRZr"
          >
            Text
          </div>
        </div>
        <div
          class="sc-hmdomO ejALKt sc-bXCLTC hiXRZr sc-fFlnrN iDfORV"
        >
          <div>
            <h1
              class="sc-dCFHLb lpvsqF sc-jxOSlx hxGVXX"
              id="user-content-this-is-markdown"
            >
              <a
                class="sc-bbSZdi cjkLKP sc-fBWQRz HTGQf heading-anchor-link"
                color="primary.main"
                href="#this-is-markdown"
              >
                <span
                  class="icon icon-link"
                />
              </a>
              This is markdown
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
